hphp/test/slow/null_coalesce_assignment/bad_lvalue.php.expectf
Fatal error: You cannot use this syntax on the left-hand side of an assignment. in %s/bad_lvalue.php on line 4
